# pevaluate

./: .gitignore  README.md  autocorrect.py  jupyter2md.py  pyproject.toml
.github/workflows/: release.yml
src/autocorrect/: cli.py  exam_open.py  flatunzip.py  jupyter2md.py  utils.py
tests/: test_exam_open.py  test_llm_online.py
