[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autocorrect"
version = "0.1.0"
description = "Automated correction pipeline for JupyterLab sessions using LLMs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "python-dotenv",
    "tenacity",
    "jupyter",
    "nbconvert",
    "python-docx",
    "pypdf"
]

[project.scripts]
autocorrect = "autocorrect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
